objects/VisualAntidote__Event_Log__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Created_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Object_Info__c</fullName>
        <label>Object Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FormResubmissions</fullName>
                </value>
                <value>
                    <fullName>FormSubmissions</fullName>
                </value>
                <value>
                    <fullName>InitialSubmission</fullName>
                </value>
                <value>
                    <fullName>ProcessSObject</fullName>
                </value>
                <value>
                    <fullName>SubmissionProcess</fullName>
                </value>
                <value>
                    <fullName>InitialRender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Log</label>
    <listViews>
        <fullName>Nolan_Daigle_Event_Log</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>VisualAntidote__Source__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>VisualAntidote__Detail__c</columns>
        <columns>NAME</columns>
        <columns>VisualAntidote__Process__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>VisualAntidote__Created_Time__c</columns>
        <columns>VisualAntidote__Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__Only_Initial_Render_Info</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>VisualAntidote__Created_Time__c</columns>
        <columns>VisualAntidote__Detail__c</columns>
        <columns>VisualAntidote__Object_Info__c</columns>
        <columns>VisualAntidote__Process__c</columns>
        <columns>VisualAntidote__Source__c</columns>
        <columns>VisualAntidote__Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VisualAntidote__Process__c</field>
            <operation>equals</operation>
            <value>InitialRender</value>
        </filters>
        <label>Only Initial Render Info</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Event Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>